      virtual package.
  * checks/huge-usr-share{,.desc}:
    + [RA] Count file size from the tar listing rather than using du.  The
      results of du vary based on file system and other factors and make
      the tag difficult to test.

  * data/fields/virtual-packages:
    + [RA] Update to current unstable and add the old xserver-xorg video
      and input virtual packages.

  * private/refresh-virtual-packages-data:
    + [RA] Fix handling of # Keep: lines to work correctly now that
      virtual packages mentioned only once are excluded.

 -- Russ Allbery <rra@debian.org>  Thu, 06 May 2010 20:59:04 -0700

lintian (2.4.1) unstable; urgency=low

  The "there's always a hidden bug" release.

  * checks/manpages:
    + [RG] Use "use" instead of "require" for Text::ParseWords and move
      it outside a loop.

  * collection/debfiles:
    + [RG] Properly handle cases where debian is a symlink.

  * data/spelling/corrections:
    + [RG] Add more spelling corrections.

  * frontend/lintian:
    + [RG] Remove finished processes from the processes hash to avoid
      trying to kill dead processes.
    + [ADB] Don't add the dependencies of the override-file check script
      to the list of checks to run if --no-override was specified.
      (Closes: #579211)

 -- Raphael Geissert <geissert@debian.org>  Mon, 26 Apr 2010 22:44:35 -0500

lintian (2.4.0) unstable; urgency=low

  The "and this is just the beginning" release.

  * Summary of tag changes:
    + Added:
      - embedded-libjpeg
      - embedded-libopenjpeg
      - embedded-libpng

  * checks/binaries{,.desc}:
    + [ADB] Use Lintian::Check::check_spelling()
    + [RG] Detect embedded copies of libpng, lib{,open}jpeg.
    + [RA] Suppress embedded-zlib if the zlib implementation is the Pascal
      version.  FPC doesn't support dynamic linking at this time, and this
      isn't the problem the tag was designed to catch.
  * checks/changelog-file:
    + [ADB] Use Lintian::Check::check_spelling()