@@ -18,8 +18,8 @@ Maintainer: {$author}
 Build-Conflicts: foo
 Architecture: {$architecture}
 Depends: {$srcpkg}, foo, baz, $\{shlibs:Depends\} $\{misc:Depends\}
-Recommends: foo, bar
-Suggests: bar | baz
+Recommends: foo, bar, no-match$\{lintian:Foo\}, match$\{lintian:Match\}
+Suggests: bar | baz, no-match$\{lintian:Bar\}, match$\{lintian:Match\}
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
