@@ -12,3 +12,4 @@ W: control-file-general source: package-type-in-debian-control line 67
 W: control-file-general source: stronger-dependency-implies-weaker control-file-general depends -> recommends foo
 W: control-file-general source: stronger-dependency-implies-weaker control-file-general depends -> suggests bar | baz
 W: control-file-general source: stronger-dependency-implies-weaker control-file-general recommends -> suggests bar | baz
+W: control-file-general source: stronger-dependency-implies-weaker control-file-general recommends -> suggests match${lintian:Match}
